@@ -159,11 +159,9 @@ requests. This is probably not something that you want.
 
 # SUPPORT FOR OLDER PERL VERSIONS
 
-Since v0.4.0, the this module requires Perl v5.12 or later.
+This module requires Perl v5.12 or later.
 
-If you need this module on Perl v5.10, please use one of the v0.3.x
-versions of this module.  Significant bug or security fixes may be
-backported to those versions.
+Future releases may only support Perl versions released in the last ten years
 
 # SOURCE
 
